--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8" />
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
         <title>Gamebliz - Global gamming community</title>
+        <meta name="keywords" content="Gamebliz" />        
+        <meta name="description" content="Gamebliz.com is Global Gamming Community." />
     </head>
     <body>
         <style>
