--- a/404.html
+++ b/404.html
@@ -6,15 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gamebliz - Global Gaming Community</title>
     <base href="/" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="Gamebliz.Web.styles.css" rel="stylesheet" />
     <meta name="keywords" content="Gamebliz" />
     <meta name="description" content="Gamebliz.com is Global Gamming Community." />
 </head>
 
 <body>
-    <main>
-        <h1>Page not found</h1>
-    </main>
+    <div id="app">
+        <style>
+            @keyframes slide {
+                0% {
+                    transform: translateX(-25%);
+                }
+
+                100% {
+                    transform: translateX(25%);
+                }
+            }
+
+            .mud-wasm {
+                animation: slide 3s ease-in-out infinite alternate;
+                background-image: linear-gradient(-60deg, #180499 50%, rgb(18, 04, 99) 50%);
+                bottom: 0;
+                left: -50%;
+                opacity: 0.5;
+                position: fixed;
+                right: -50%;
+                top: 0;
+                z-index: 1;
+            }
+
+            .mud-wasm-cont {
+                left: 50%;
+                padding: 10vmin;
+                position: fixed;
+                text-align: center;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
+        </style>
+        <div style="height: 100%; width: 100%; margin: 0; position: fixed;">
+            <div class="mud-wasm"></div>
+            <div class="mud-wasm" style="animation-direction: alternate-reverse; animation-duration: 4s;"></div>
+            <div class="mud-wasm" style="animation-duration: 5s;"></div>
+        </div>
+    </div>
+
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
