--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/css/boxicons.min.css" integrity="sha512-cn16Qw8mzTBKpu08X0fwhTSv02kK/FojjNLz0bwp2xJ4H+yalwzXKFw/5cLzuBZCxGWIA+95X4skzvo8STNtSg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="Gamebliz.Web.styles.css" />
+    <link rel="stylesheet" href="css/app.css?v1.0.0.1" />
+    <link rel="stylesheet" href="Gamebliz.Web.styles.css?v1.0.0.1" />
 
     <meta name="keywords" content="Gamebliz" />
     <meta name="description" content="Gamebliz.com is Global Gamming Community." />
